# otus-c-2023-01

./: .gitignore  README.md
hw1_zip/: Makefile  constants.c  constants.h  main.c  utils.c  utils.h
hw2_converter/: Makefile  constants.h  convert.c  convert.h  main.c  utils.c  utils.h
hw3_hash/: Makefile  constants.h  hash.c  hash.h  main.c  utils.c  utils.h
hw3_hash/test/: simple_text.txt  text.txt
hw4_weather/: CMakeLists.txt  Makefile  README.md  constants.h  main.c  utils.c  utils.h
hw5_gstreamer_plugin/: gstwavlesrc.c  gstwavlesrc.h  meson.build
